<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_holo_light"
    tools:context=".SearchResultsActivity" >

    <ProgressBar
        android:id="@+id/progress_bar_search"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />
    
    <LinearLayout 
        android:id="@+id/search_result_connection_error_layout"
	    android:orientation="vertical"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_centerInParent="true" 
    	android:visibility="gone">
        
        <TextView 
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/relic_details_error_text"
			android:textStyle="italic"
			android:textSize="18sp"
			/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relic_details_error_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:onClick="repeatSearchResults"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/search_result_no_connection_layout"
	    android:orientation="vertical"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_centerInParent="true" 
    	android:visibility="gone">
        
        <TextView 
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/search_no_connection"
			android:textStyle="italic"
			android:textSize="18sp"
			/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relic_details_error_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:onClick="repeatSearchResults"
            />
    </LinearLayout>
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent" 
        android:scrollbars="none"
        android:listSelector="@drawable/draw_listview_selector"
        android:drawSelectorOnTop="true"
        android:dividerHeight="3.0sp"
      	/>
    
    <TextView
      android:id="@+id/search_no_results_id"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/search_no_results"
      android:textSize="17sp"
      android:textStyle="italic"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:visibility="gone"	
      />

</RelativeLayout>
