<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_holo_light"
    android:scrollbars="none"
    tools:context=".SearchActivity" >

    <LinearLayout  
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:background="@drawable/googlecard"
    	android:paddingLeft="10dp"
    	android:paddingRight="10dp"
    	android:paddingBottom="25dp"
    	>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        >
        <EditText
            android:id="@+id/search_what_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/search_what" >
		<requestFocus />
            
        </EditText>

        <EditText
            android:id="@+id/search_where_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/search_where" />
       
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/search_button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="6dp">       
        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"           
            android:layout_alignParentBottom="true"          
            android:background="@drawable/draw_standard_button"
            android:onClick="startSearchResults"
            android:text="@string/search_button_search"
            android:textColor="@color/page_foreground" 
            />
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/search_date_label_layout_id"           	
       	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="10dp"
        android:clickable="true" >
        	
            <TextView
            	android:id="@+id/search_date_label_id"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:layout_centerInParent="true"
            	android:text="@string/search_date_label"
            	android:textColor="@color/page_background"
            	android:textStyle="bold"
            />
            <ImageView 
                android:id="@+id/search_date_label_icon"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_alignParentRight="true"
            	android:layout_centerInParent="true"
            	android:src="@drawable/ic_arrow_unfold"
            	android:contentDescription="@string/content_search_fold_unfold"
            	/>
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/search_date_params"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        >
        
        
        <View
			android:id="@+id/search_date_params_divider"
	    	android:layout_width="wrap_content"
	    	android:layout_height="1dp"
	    	android:layout_marginTop="2dp"
			android:layout_marginBottom="1dp" 	    	    
	    	android:background="@color/page_background" />
        
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	>
        	<LinearLayout
        		android:layout_marginTop="16dp"
        		android:layout_width="0dp"
        		android:layout_weight="0.5"
        		android:layout_height="wrap_content"
        		android:orientation="horizontal"
        		android:paddingLeft="10dp"
    			android:paddingRight="10dp"
    			android:baselineAligned="true"
        		>
        		
        		<EditText
        		    android:id="@+id/search_from_id"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:inputType="number"
            		android:hint="@string/search_from"
            		android:maxLength="4"
            		/>
        	</LinearLayout>
        	<LinearLayout
        		android:layout_marginTop="16dp"
        		android:layout_width="0dp"
        		android:layout_weight="0.5"
        		android:layout_height="wrap_content"
        		android:orientation="horizontal"
        		android:paddingLeft="10dp"
    			android:paddingRight="10dp"
    			android:baselineAligned="true"
        		>
        		
        		<EditText
        		    android:id="@+id/search_to_id"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:inputType="number"
            		android:hint="@string/search_to"
            		android:maxLength="4"
            		/>
        	</LinearLayout>
        </LinearLayout>
    </LinearLayout>
	
    
    <RelativeLayout 
        android:id="@+id/search_filter_label_layout_id"           	
       	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="10dp"
        android:clickable="true" >
        	
            <TextView
                android:id="@+id/search_filter_label_id"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:layout_centerInParent="true"
            	android:text="@string/search_filter_label"
            	android:textColor="@color/page_background"
            	android:textStyle="bold"            
            />
            <ImageView 
                android:id="@+id/search_filter_label_icon"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_alignParentRight="true"
            	android:layout_centerInParent="true"
            	android:src="@drawable/ic_arrow_unfold"
            	android:contentDescription="@string/content_search_fold_unfold"
            	/>
    </RelativeLayout>
        
    <LinearLayout
        android:id="@+id/search_filter_params"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <View
			android:id="@+id/search_filter_params_divider"
	    	android:layout_width="wrap_content"
	    	android:layout_height="1dp"
	    	android:layout_marginTop="2dp"
			android:layout_marginBottom="1dp" 	    	    
	    	android:background="@color/page_background"
	    	 />
        
        <LinearLayout
            android:id="@+id/search_filter_params_state_layout"
        	android:paddingTop="10dp"
        	android:paddingBottom="8dp"
        	android:paddingLeft="10dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:clickable="true"
        	android:background="@drawable/draw_listview_selector"
        	>
            
            <TextView
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:layout_marginBottom="3dp"
            	android:text="@string/search_filter_state_label"
            	android:textSize="18sp"
            />
            <TextView
                android:id="@+id/search_filter_params_state"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:textSize="13sp"            	
            />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
	    	android:layout_height="1dp"
	    	android:layout_marginTop="1dp"
			android:layout_marginBottom="1dp" 	    	    
	    	android:background="@color/divider"
	    	/>
        
        <LinearLayout
            android:id="@+id/search_filter_params_content_layout"
        	android:paddingTop="10dp"
        	android:paddingBottom="8dp"
        	android:paddingLeft="10dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:clickable="true"
        	android:background="@drawable/draw_listview_selector"
        	>
            
            <TextView
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:layout_marginBottom="3dp"
            	android:text="@string/search_filter_content_label"
            	android:textSize="18sp"
            />
            <TextView
                android:id="@+id/search_filter_params_content"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:textSize="13sp"            	
            />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
	    	android:layout_height="1dp"
	    	android:layout_marginTop="1dp"
			android:layout_marginBottom="1dp" 	    	    
	    	android:background="@color/divider"
	    	/>
        
        <LinearLayout
            android:id="@+id/search_filter_params_type_layout"
        	android:paddingTop="10dp"
        	android:paddingBottom="8dp"
        	android:paddingLeft="10dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:clickable="true"
        	android:background="@drawable/draw_listview_selector" 
        	>
            
            <TextView
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:layout_marginBottom="3dp"
            	android:text="@string/search_filter_type_label"
            	android:textSize="18sp"
            />
            <TextView
                android:id="@+id/search_filter_params_type"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:textSize="13sp"            	
            />
        </LinearLayout>
        
	</LinearLayout>
	
</LinearLayout>
</ScrollView>