<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_holo_light"
    tools:context=".HomeActivity" >

    <RelativeLayout 
        android:id="@+id/home_splash_id"
        android:layout_width="match_parent"
    	android:layout_height="match_parent" 
    	android:background="@drawable/googlecard" >

        <ImageView
            android:id="@+id/home_img_splash_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="false"
            android:contentDescription="@string/content_home_background"
            android:cropToPadding="false"
            android:src="@drawable/ic_home" />

        <TextView
            android:id="@+id/home_text_splash_1_id"
    		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:layout_centerInParent="true"
     		android:layout_centerHorizontal="true"
     		android:text="@string/home_text_splash_1"
     		android:textColor="@color/home_text"
      		
      	/>
        <TextView
    		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:layout_below="@id/home_text_splash_1_id"
     		android:layout_centerHorizontal="true"
     		android:text="@string/home_text_splash_2"
     		android:textColor="@color/home_text"
      		
      	/>
    </RelativeLayout>
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent" 
        android:scrollbars="none"
        android:listSelector="@drawable/draw_listview_selector"
        android:dividerHeight="3.0sp"
        android:drawSelectorOnTop="true"
      	/>

</RelativeLayout>
